# Pattern-Searcher

./: .gitignore  CMakeLists.txt  LICENSE  README.md
StringSearcher/: CMakeLists.txt  Researcher.cpp  Researcher.h  StringSearcher.cpp
